# pybind11_bazel

examples/: WORKSPACE
examples/cpp_class/: adder.h
examples/extension/: adder_extension.cpp
examples/tests/: BUILD.bazel  extension_test.py
